--- a/css/styles.css
+++ b/css/styles.css
@@ -690,6 +690,10 @@ address {
 
 /* Join */
 
+.join {
+  margin-right: 93px;
+}
+
 .join-title {
   font-weight: 700;
   line-height: 1.14;
@@ -731,6 +735,74 @@ address {
 .join-link:hover,
 .join-link:focus {
   background-color: var(--accent-text-color);
+}
+
+.newsletter-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  margin-bottom: 20px;
+  color: var(--accent-secondary-text-color);
+}
+.newsletter-label {
+  display: block;
+  align-items: center;
+  justify-content: center;
+}
+.newsletter-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.newsletter-input {
+  margin-right: 12px;
+  padding: 15px;
+  width: 358px;
+  height: 50px;
+
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+
+  background-color: #2f303a;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
+
+.newsletter-btn {
+  display: flex;
+  padding: 10px 28px;
+  width: 200px;
+  height: 50px;
+  align-items: center;
+
+  background-color: var(--accent-text-color);
+  color: var(--accent-secondary-text-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+
+  cursor: pointer;
+}
+.submite-text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+}
+
+.submite-text + .newsletter-icon {
+  margin-left: 10px;
+}
+.newsletter-icon {
+  fill: #ffffff;
+  width: 24px;
+  height: 24px;
 }
 
 /* Portfolio Page */
