--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,9 @@ address {
 }
 
 .hero-title {
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 30px;
 
   font-weight: 900;
@@ -357,6 +360,18 @@ address {
   border-radius: 50%;
 
   cursor: pointer;
+}
+.form-wrapper {
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 448px;
+  height: 58px;
 }
 
 /* Peculiarities */
