--- a/css/styles.css
+++ b/css/styles.css
@@ -330,7 +330,7 @@ address {
   position: absolute;
   top: 50%;
   left: 50%;
-  padding: 63px 24px;
+  padding: 40px;
   width: 528px;
   height: 581px;
 
@@ -359,6 +359,165 @@ address {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 
+  cursor: pointer;
+}
+
+/* FORM MODAL */
+
+.form-title {
+  display: block;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  margin-bottom: 12px;
+
+  color: #212121;
+}
+
+.form-modal-group,
+.form-textarea {
+  display: block;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.form-modal-group {
+  position: relative;
+}
+
+.form-modal-label {
+  margin-bottom: 4px;
+  display: block;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: #757575;
+}
+
+.form-modal-input {
+  width: 100%;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border var(--animation);
+}
+
+.form-modal-input:hover,
+.form-modal-input:focus {
+  border: 1px solid #2196f3;
+}
+
+.icon-svg {
+  position: absolute;
+  left: 12px;
+  bottom: 14px;
+
+  color: #212121;
+}
+
+.form-textarea {
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: #757575;
+}
+
+.form-textarea-text {
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  resize: none;
+  width: 100%;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.input-checkbox {
+  display: flex;
+}
+
+.form-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.custom-checkbox {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  width: 18px;
+  height: 17px;
+  margin-right: 7px;
+
+  outline: 2px solid var(--accent-text-color);
+  outline-offset: -2px;
+  border-radius: 2px;
+
+  transition: background-color var(--animation);
+}
+
+.checkbox:checked + .custom-checkbox {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
+.custom-checkbox-icon {
+  opacity: 0;
+
+  transition: opacity var(--animation);
+}
+
+.checkbox:checked + .custom-checkbox .custom-checkbox-icon {
+  opacity: 1;
+}
+
+.custom-checkbox-desc {
+  margin-right: 5px;
+  line-height: 1.71;
+
+  color: #757575;
+}
+
+.label-link {
+  line-height: 1.71;
+
+  color: #2196f3;
+}
+
+.modal-form .base.btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.base-btn {
+  padding: 10px 55px;
+  width: 200px;
+  height: 50px;
+  align-items: center;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+
+  color: #ffffff;
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
 }
 
