--- a/css/styles.css
+++ b/css/styles.css
@@ -358,7 +358,7 @@ address {
   background-color: var(--accent-secondary-text-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-
+  transition: background-color var(--animation), border var(--animation);
   cursor: pointer;
 }
 
@@ -413,6 +413,7 @@ address {
 .form-modal-input:hover,
 .form-modal-input:focus {
   border: 1px solid #2196f3;
+  cursor: pointer;
 }
 
 .icon-svg {
@@ -421,6 +422,7 @@ address {
   bottom: 14px;
 
   color: #212121;
+  transition: fill var(--animation);
 }
 
 .form-textarea {
@@ -430,6 +432,8 @@ address {
   letter-spacing: 0.01em;
 
   color: #757575;
+
+  cursor: pointer;
 }
 
 .form-textarea-text {
@@ -440,6 +444,7 @@ address {
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .input-checkbox {
@@ -488,6 +493,8 @@ address {
   line-height: 1.71;
 
   color: #757575;
+
+  cursor: pointer;
 }
 
 .label-link {
@@ -930,10 +937,10 @@ address {
   line-height: 1.25;
   letter-spacing: 0.03em;
 
+  color: var(--accent-secondary-text-color);
   background-color: #2f303a;
-  transition: border var(--animation);
-
   border: 1px solid rgba(255, 255, 255, 0.3);
+  transition: border var(--animation);
   border-radius: 4px;
 }
 
