--- a/css/styles.css
+++ b/css/styles.css
@@ -332,7 +332,6 @@ address {
   left: 50%;
   padding: 40px;
   width: 528px;
-  height: 581px;
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--animation);
@@ -354,14 +353,22 @@ address {
   width: 30px;
   height: 30px;
   padding: 0;
-
+  color: #000000;
   background-color: var(--accent-secondary-text-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  transition: background-color var(--animation), border var(--animation);
+  transition: color var(--animation), border var(--animation);
   cursor: pointer;
 }
 
+.modal-button:hover,
+.modal-button:focus {
+  fill: var(--accent-text-color);
+}
+
+.close-btn {
+  transition: fill var(--animation);
+}
 /* FORM MODAL */
 
 .form-title {
@@ -404,15 +411,18 @@ address {
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 42px;
-
+  color: #212121;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: border var(--animation);
 }
 
 .form-modal-input:hover,
-.form-modal-input:focus {
-  border: 1px solid #2196f3;
+.form-textarea-text:hover,
+.form-modal-input:focus,
+.form-textarea-text:focus {
+  border-color: #2196f3;
+  outline: none;
   cursor: pointer;
 }
 
@@ -421,8 +431,13 @@ address {
   left: 12px;
   bottom: 14px;
 
-  color: #212121;
+  fill: #212121;
   transition: fill var(--animation);
+  cursor: pointer;
+}
+.form-modal-input:hover + .icon-svg,
+.form-modal-input:focus + .icon-svg {
+  fill: var(--accent-text-color);
 }
 
 .form-textarea {
@@ -462,8 +477,8 @@ address {
   display: flex;
   text-align: center;
   justify-content: center;
-  width: 18px;
-  height: 17px;
+  width: 16px;
+  height: 15px;
   margin-right: 7px;
 
   outline: 2px solid var(--accent-text-color);
@@ -471,11 +486,13 @@ address {
   border-radius: 2px;
 
   color: #ffffff;
-  transition: background-color var(--animation);
+  transition: background-color var(--animation), border-color var(--animation);
+  cursor: pointer;
 }
 
 .checkbox:checked + .custom-checkbox {
-  background-color: #2196f3;
+  background-color: var(--accent-text-color);
+  outline: var(--accent-text-color);
 }
 
 .custom-checkbox-icon {
@@ -509,10 +526,16 @@ address {
   margin-right: auto;
 }
 
-.base-btn {
-  padding: 10px 55px;
+.base-btn.btn {
+  margin-left: auto;
+  margin-right: auto;
   width: 200px;
   height: 50px;
+}
+
+.base-btn {
+  padding: 10px 55px;
+
   align-items: center;
 
   font-weight: 700;
@@ -521,11 +544,18 @@ address {
   letter-spacing: 0.06em;
 
   color: #ffffff;
-  background-color: #188ce8;
+  background-color: var(--accent-text-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: backgroud-color var(--animation), box-shadow var(--animation);
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.base-btn:hover,
+.base-btn:focus {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* Peculiarities */
@@ -938,22 +968,23 @@ address {
   letter-spacing: 0.03em;
 
   color: var(--accent-secondary-text-color);
-  background-color: #2f303a;
+  background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: border var(--animation);
   border-radius: 4px;
 }
 
 .newsletter-input:hover,
 .newsletter-input:focus {
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(33, 150, 230, 0.8);
 }
 
 .newsletter-btn {
   display: flex;
   padding: 10px 28px;
-  width: 200px;
-  height: 50px;
+  min-width: 200px;
+  min-height: 50px;
   align-items: center;
 
   background-color: var(--accent-text-color);
@@ -961,23 +992,29 @@ address {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-
+  transition: background-color var(--animation), box-shadow var(--animation);
   cursor: pointer;
 }
 .submite-text {
+  position: relative;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
 }
 
-.submite-text + .newsletter-icon {
-  margin-left: 10px;
-}
 .newsletter-icon {
+  position: absolute;
+  display: block;
   fill: #ffffff;
+  right: 5%;
   width: 24px;
   height: 24px;
+}
+.newsletter-btn:hover,
+.newsletter-btn:focus {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
 }
 
 /* Portfolio Page */
