--- a/css/styles.css
+++ b/css/styles.css
@@ -196,13 +196,13 @@ address {
 
 .nav-link.active::after {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
 
   content: '';
   display: block;
   width: 100%;
-  height: 3px;
+  height: 4px;
 
   background-color: var(--accent-text-color);
   border-radius: 2px;
@@ -973,6 +973,7 @@ address {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: border var(--animation);
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .newsletter-input:hover,
@@ -996,7 +997,7 @@ address {
   cursor: pointer;
 }
 .submite-text {
-  position: relative;
+  margin-right: 10px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -1004,16 +1005,14 @@ address {
 }
 
 .newsletter-icon {
-  position: absolute;
   display: block;
   fill: #ffffff;
-  right: 5%;
   width: 24px;
   height: 24px;
 }
 .newsletter-btn:hover,
 .newsletter-btn:focus {
-  background-color: #188ce8;
+  background-color: #1972ba;
   box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
 }
 
